; ModuleID = '/home/carl/AnghaBench/openssl/crypto/pkcs12/extr_p12_crt.c_copy_bag_attr.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/pkcs12/extr_p12_crt.c_copy_bag_attr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32*, i32)* @copy_bag_attr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @copy_bag_attr(%struct.TYPE_3__* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32*, i32** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = call i32 @EVP_PKEY_get_attr_by_NID(i32* %10, i32 %11, i32 -1)
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* %8, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %27

16:                                               ; preds = %3
  %17 = load i32*, i32** %6, align 8
  %18 = load i32, i32* %8, align 4
  %19 = call i32* @EVP_PKEY_get_attr(i32* %17, i32 %18)
  store i32* %19, i32** %9, align 8
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i32*, i32** %9, align 8
  %23 = call i32 @X509at_add1_attr(i32* %21, i32* %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %26, label %25

25:                                               ; preds = %16
  store i32 0, i32* %4, align 4
  br label %27

26:                                               ; preds = %16
  store i32 1, i32* %4, align 4
  br label %27

27:                                               ; preds = %26, %25, %15
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local i32 @EVP_PKEY_get_attr_by_NID(i32*, i32, i32) #1

declare dso_local i32* @EVP_PKEY_get_attr(i32*, i32) #1

declare dso_local i32 @X509at_add1_attr(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
